# QtCards

./: .gitignore  CMakeLists.txt  README.md
include/: Card.h  ContentType.h  DatabaseManager.h  Deck.h  Scheduler.h  TestMode.h  mainwindow.h
src/cpp/: main.cpp  mainwindow.cpp
src/cpp/core/: Card.cpp  DatabaseManager.cpp  Deck.cpp  Scheduler.cpp
src/cpp/models/: Card.cpp  Deck.cpp
src/tests/: CMakeLists.txt
src/tests/include/: TestCard.h  TestDeck.h  TestScheduler.h
src/tests/unit/: test_card.cpp  test_deck.cpp  test_main.cpp  test_scheduler.cpp
src/ui/: mainwindow.ui
